--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -1,13 +1,124 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Source+Serif+Pro:wght@400;600;700;800&display=swap');
+
+:root {
+  --background-primary: #FFF7ED;
+  --background-secondary: #FFF7ED;
+  --color-red: #CD4848;
+  --color-orange: #F2B22A;
+  --color-yellow: #FFF531;
+  --color-green: #58AF29;
+  --color-cyan: #3BEECD;
+  --color-blue: #1B71EB;
+  --color-purple: #BB55EE;
+  --color-pink: #FF23C9;
+  --italic-color: #32946E;
+  --bold-color: #A8524D;
+  --text-highlight-bg: #F1F52A;
+  --link-color: #4192FF;
+  --link-color-hover: #95BEFF;
+  --link-external-color: #C688FF;
+  --link-external-color-hover: #CBACFA;
+  --h1-color: #E16863;
+  --h2-color: #FF8B8B;
+  --h3-color: #F69D48;
+  --h4-color: #FFAB64;
+  --h5-color: #90D47F;
+  --h6-color: #82CE70;
+  --hr-color: #FF6D3E;
+  --blockquote-border-color: #F6C177;
+  --blockquote-border-width: 5px;
+  --tag-radius: 16px;
+  --tag-border-width: 1px;
+  --radius-s: 6px;
+  --radius-m: 9px;
+  --radius-l: 12px;
+}
+
 body {
-    /***
-      ADD YOUR CUSTOM STYLING HERE. (INSIDE THE body {...} section.)
-      IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
-   ***/
-    //  background-color: white;
-    //  .content {
-    //   font-size: 14px;
-    //  }
-    //  h1 {
-    //   color: black;
-    //  }
+  font-family: 'Inter', sans-serif;
+  background-color: var(--background-primary);
+
+  h1 {
+    color: var(--h1-color);
+    font-family: 'Source Serif Pro', serif;
+    font-size: 1.8em;
+    font-weight: 750;
+    letter-spacing: -0.01em;
+  }
+
+  h2 {
+    color: var(--h2-color);
+    font-size: 1.4em;
+    font-weight: 500;
+  }
+
+  h3 {
+    color: var(--h3-color);
+    font-family: 'Source Serif Pro', serif;
+    font-size: 1.6em;
+    font-weight: 800;
+  }
+
+  h4 {
+    color: var(--h4-color);
+    font-size: 1.3em;
+    font-weight: 450;
+  }
+
+  h5 {
+    color: var(--h5-color);
+    font-family: 'Source Serif Pro', serif;
+    font-size: 1.3em;
+    font-weight: 750;
+  }
+
+  h6 {
+    color: var(--h6-color);
+    font-size: 1.2em;
+    font-weight: 550;
+    text-transform: none;
+  }
+
+  strong, b {
+    color: var(--bold-color);
+  }
+
+  em, i {
+    color: var(--italic-color);
+  }
+
+  mark {
+    background-color: var(--text-highlight-bg);
+  }
+
+  a {
+    color: var(--link-color);
+    text-decoration: none;
+    &:hover { color: var(--link-color-hover); }
+    &.external-link {
+      color: var(--link-external-color);
+      &:hover { color: var(--link-external-color-hover); }
+    }
+  }
+
+  hr {
+    border-color: var(--hr-color);
+    border-width: 1px;
+  }
+
+  blockquote {
+    border-left: var(--blockquote-border-width) solid var(--blockquote-border-color);
+    padding-left: 1em;
+  }
+
+  .tag, a.tag {
+    border-radius: var(--tag-radius);
+    border-width: var(--tag-border-width);
+    border-style: solid;
+  }
+}
+
+/* --- Hide site header --- */
+header, .site-header, nav.navbar, .navbar {
+  display: none !important;
 }
