--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -208,7 +208,7 @@ nav.filetree-sidebar h1 {
   display: block !important;
   cursor: pointer;
   font-weight: 600;
-  color: #C84040;
+  color: #A8524D;
   list-style: none !important;
   user-select: none;
 }
